# multimedia-gst-aml-plugins1

./: Config.in  gst-aml-plugins.mk
gst-aml-plugins-1.0/: Makefile.am  configure.ac
gst-aml-plugins-1.0/audio/aml_audio_hal_sink/: Makefile.am  gstamlhalasink.c  gstamlhalasink.h  gstamlhalasink_new.c  gstamlhalasink_new.h  gstamlringbuffer.c
gst-aml-plugins-1.0/audio/amladec/: Makefile.am
gst-aml-plugins-1.0/audio/amlasink/: Makefile.am
gst-aml-plugins-1.0/common/: Makefile.am
gst-aml-plugins-1.0/video/amlvdec/: Makefile.am  gstamlvdec.c
gst-aml-plugins-1.0/video/amlvsink/: Makefile.am
